load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/blackhorseya/godine
# gazelle:proto disable_global
gazelle(name = "gazelle")

go_library(
    name = "godine_lib",
    srcs = ["main.go"],
    importpath = "github.com/blackhorseya/godine",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "godine",
    embed = [":godine_lib"],
    visibility = ["//visibility:public"],
)
