load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "init.go",
        "root.go",
        "start.go",
    ],
    importpath = "github.com/blackhorseya/godine/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/platform",
        "//app/infra/authz",
        "//app/infra/configx",
        "//pkg/cmdx",
        "//pkg/logging",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)
