load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "platform",
    srcs = [
        "impl.go",
        "injector.go",
        "router.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/godine/adapter/platform",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/platform/web/templates",
        "//api",
        "//app/domain/logistics/biz",
        "//app/domain/logistics/repo/delivery",
        "//app/domain/notification/biz",
        "//app/domain/notification/repo/notification",
        "//app/domain/order/biz",
        "//app/domain/order/repo/order",
        "//app/domain/payment/biz",
        "//app/domain/payment/repo/payment",
        "//app/domain/restaurant/biz",
        "//app/domain/restaurant/repo/restaurant",
        "//app/domain/user/biz",
        "//app/infra/authx",
        "//app/infra/configx",
        "//app/infra/otelx",
        "//app/infra/snowflakex",
        "//app/infra/storage/mongodbx",
        "//app/infra/storage/postgresqlx",
        "//app/infra/storage/redix",
        "//app/infra/transports/grpcx",
        "//app/infra/transports/httpx",
        "//entity/domain/logistics/biz",
        "//entity/domain/notification/biz",
        "//entity/domain/order/biz",
        "//entity/domain/payment/biz",
        "//entity/domain/restaurant/biz",
        "//entity/domain/user/biz",
        "//pkg/adapterx",
        "//pkg/contextx",
        "//pkg/errorx",
        "@com_github_gin_contrib_sessions//:sessions",
        "@com_github_gin_contrib_sessions//cookie",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime",
        "@com_github_spf13_viper//:viper",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//health",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//reflection",
        "@org_golang_x_oauth2//:oauth2",
        "@org_uber_go_zap//:zap",
    ],
)
