load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "platform",
    srcs = [
        "impl.go",
        "injector.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/godine/adapter/platform",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/platform/handlers",
        "//app/domain/logistics/biz",
        "//app/domain/logistics/repo/delivery",
        "//app/domain/notification/biz",
        "//app/domain/notification/repo/notification",
        "//app/domain/order/biz",
        "//app/domain/order/repo/order",
        "//app/domain/payment/biz",
        "//app/domain/payment/repo/payment",
        "//app/domain/restaurant/biz",
        "//app/domain/user/biz",
        "//app/infra/authx",
        "//app/infra/configx",
        "//app/infra/otelx",
        "//app/infra/snowflakex",
        "//app/infra/storage/mongodbx",
        "//app/infra/storage/postgresqlx",
        "//app/infra/transports/grpcx",
        "//entity/domain/logistics/biz",
        "//entity/domain/notification/biz",
        "//entity/domain/order/biz",
        "//entity/domain/payment/biz",
        "//entity/domain/restaurant/biz",
        "//entity/domain/restaurant/biz/bizconnect",
        "//entity/domain/user/biz",
        "//pkg/adapterx",
        "//pkg/contextx",
        "@com_connectrpc_connect//:connect",
        "@com_connectrpc_grpchealth//:grpchealth",
        "@com_connectrpc_grpcreflect//:grpcreflect",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_rs_cors//:cors",
        "@com_github_spf13_viper//:viper",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//health",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//reflection",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
        "@org_uber_go_zap//:zap",
    ],
)
