load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "platform",
    srcs = [
        "grpc_server.go",
        "impl.go",
        "injector.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/godine/adapter/platform",
    visibility = ["//visibility:public"],
    deps = [
        "//app/domain/logistics",
        "//app/domain/notification",
        "//app/domain/order",
        "//app/domain/payment",
        "//app/domain/restaurant",
        "//app/domain/user",
        "//app/infra/authx",
        "//app/infra/configx",
        "//app/infra/otelx",
        "//app/infra/snowflakex",
        "//app/infra/storage/mongodbx",
        "//app/infra/storage/postgresqlx",
        "//app/infra/transports/grpcx",
        "//entity/domain/logistics/biz",
        "//entity/domain/notification/biz",
        "//entity/domain/order/biz",
        "//entity/domain/payment/biz",
        "//entity/domain/restaurant/biz",
        "//entity/domain/user/biz",
        "//pkg/adapterx",
        "//pkg/contextx",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_rs_cors//:cors",
        "@com_github_spf13_viper//:viper",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//health",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//reflection",
        "@org_uber_go_zap//:zap",
    ],
)
