load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "user",
    srcs = [
        "impl.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/godine/adapter/user",
    visibility = ["//visibility:public"],
    deps = [
        "//app/infra/configx",
        "//app/infra/otelx",
        "//app/infra/transports/httpx",
        "//pkg/adapterx",
        "//pkg/contextx",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_spf13_viper//:viper",
        "@org_uber_go_zap//:zap",
    ],
)
