load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "user",
    srcs = [
        "impl.go",
        "injector.go",
        "router.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/godine/adapter/user",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/user/web/templates",
        "//app/infra/authx",
        "//app/infra/configx",
        "//app/infra/otelx",
        "//app/infra/transports/httpx",
        "//pkg/adapterx",
        "//pkg/contextx",
        "//pkg/errorx",
        "@com_github_gin_contrib_sessions//:sessions",
        "@com_github_gin_contrib_sessions//cookie",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_spf13_viper//:viper",
        "@org_golang_x_oauth2//:oauth2",
        "@org_uber_go_zap//:zap",
    ],
)
