load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "domain",
    srcs = [
        "account_grpc_client.go",
        "account_grpc_server.go",
        "logistics_grpc_client.go",
        "logistics_grpc_server.go",
        "notification_grpc_client.go",
        "notification_grpc_server.go",
        "order_grpc_client.go",
        "order_grpc_server.go",
        "payment_grpc_client.go",
        "payment_grpc_server.go",
        "restaurant_grpc_client.go",
        "restaurant_grpc_server.go",
        "restaurant_menu_grpc_client.go",
        "restaurant_menu_grpc_server.go",
        "wire.go",
    ],
    importpath = "github.com/blackhorseya/godine/app/domain",
    visibility = ["//visibility:public"],
    deps = [
        "//app/infra/otelx",
        "//app/infra/transports/grpcx",
        "//entity/domain/logistics/biz",
        "//entity/domain/logistics/model",
        "//entity/domain/logistics/repo",
        "//entity/domain/notification/biz",
        "//entity/domain/notification/model",
        "//entity/domain/notification/repo",
        "//entity/domain/order/biz",
        "//entity/domain/order/model",
        "//entity/domain/order/repo",
        "//entity/domain/payment/biz",
        "//entity/domain/payment/model",
        "//entity/domain/payment/repo",
        "//entity/domain/restaurant/biz",
        "//entity/domain/restaurant/model",
        "//entity/domain/restaurant/repo",
        "//entity/domain/user/biz",
        "//entity/domain/user/model",
        "//pkg/contextx",
        "//pkg/persistence",
        "@com_github_google_wire//:wire",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "domain_test",
    srcs = ["restaurant_grpc_server_integration_test.go"],
    embed = [":domain"],
    deps = [
        "//app/domain/restaurant:go_default_library",
        "//app/infra/storage/mongodbx",
        "//app/infra/storage/redix",
        "//entity/domain/restaurant/biz",
        "//pkg/contextx",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@com_github_grpc_ecosystem_go_grpc_middleware//recovery",
        "@com_github_grpc_ecosystem_go_grpc_middleware//tags",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@com_github_stretchr_testify//suite",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//resolver",
        "@org_golang_google_grpc//test/bufconn",
        "@org_mongodb_go_mongo_driver//mongo",
    ],
)
