load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "contextx",
    srcs = [
        "contextx.go",
        "middleware.go",
    ],
    importpath = "github.com/blackhorseya/godine/pkg/contextx",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "contextx_test",
    srcs = ["contextx_test.go"],
    embed = [":contextx"],
)
