load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "contextx",
    srcs = [
        "contextx.go",
        "grpc_server_middleware.go",
        "middleware.go",
    ],
    importpath = "github.com/blackhorseya/godine/pkg/contextx",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@org_golang_google_grpc//:grpc",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "contextx_test",
    srcs = ["contextx_test.go"],
    embed = [":contextx"],
)
