load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "contextx",
    srcs = ["contextx.go"],
    importpath = "github.com/blackhorseya/godine/pkg/contextx",
    visibility = ["//visibility:public"],
    deps = ["@org_uber_go_zap//:zap"],
)

go_test(
    name = "contextx_test",
    srcs = ["contextx_test.go"],
    embed = [":contextx"],
)
