load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = ["repository.go"],
    importpath = "github.com/blackhorseya/godine/pkg/utils",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/zap/ctxzap",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//bson/primitive",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
        "@org_uber_go_zap//:zap",
    ],
)
