load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "wirex",
    srcs = ["injector.go"],
    importpath = "github.com/blackhorseya/godine/adapter/notify/wirex",
    visibility = ["//visibility:public"],
    deps = [
        "//app/infra/configx",
        "//entity/notification/biz",
    ],
)
