load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "handler",
    srcs = [
        "impl.go",
        "injector.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/godine/adapter/order/handler",
    visibility = ["//visibility:public"],
    deps = [
        "//api/order/restful",
        "//app/infra/configx",
        "//app/infra/otelx",
        "//app/infra/transports/httpx",
        "//pkg/adapterx",
        "//pkg/contextx",
        "//pkg/logging",
        "//pkg/responsex",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_google_wire//:wire",
        "@com_github_spf13_viper//:viper",
        "@org_uber_go_zap//:zap",
    ],
)
