load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "restful",
    srcs = [
        "impl.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/godine/adapter/order/restful",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/order/restful/v1:restful",
        "//adapter/order/wirex",
        "//api/order/restful",
        "//app/domain/order/biz",
        "//app/domain/order/repo/order",
        "//app/domain/restaurant/biz",
        "//app/infra/configx",
        "//app/infra/otelx",
        "//app/infra/storage/mongodbx",
        "//app/infra/transports/httpx",
        "//pkg/adapterx",
        "//pkg/contextx",
        "//pkg/logging",
        "//pkg/responsex",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_google_wire//:wire",
        "@com_github_spf13_viper//:viper",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
        "@org_uber_go_zap//:zap",
    ],
)
