load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "wirex",
    srcs = ["injector.go"],
    importpath = "github.com/blackhorseya/godine/adapter/order/wirex",
    visibility = ["//visibility:public"],
    deps = [
        "//app/infra/configx",
        "//entity/order/biz",
    ],
)
