load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "restful",
    srcs = ["impl.go"],
    importpath = "github.com/blackhorseya/godine/adapter/payment/restful",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/payment/wirex",
        "//api/payment/restful",
        "//app/infra/transports/httpx",
        "//pkg/adapterx",
        "//pkg/contextx",
        "//pkg/responsex",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
        "@org_uber_go_zap//:zap",
    ],
)
