load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "grpc",
    srcs = [
        "impl.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/godine/adapter/platform/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/adapterx",
        "//pkg/contextx",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_spf13_viper//:viper",
    ],
)
