load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "grpc",
    srcs = [
        "impl.go",
        "router.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/godine/adapter/platform/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/platform/grpc/web/templates",
        "//adapter/platform/wirex",
        "//app/domain/notification/biz",
        "//app/domain/notification/repo/notification",
        "//app/domain/payment/biz",
        "//app/domain/payment/repo/payment",
        "//app/domain/restaurant/biz",
        "//app/domain/restaurant/repo/restaurant",
        "//app/domain/user/biz",
        "//app/infra/authx",
        "//app/infra/configx",
        "//app/infra/otelx",
        "//app/infra/storage/mongodbx",
        "//app/infra/storage/redix",
        "//app/infra/transports/grpcx",
        "//app/infra/transports/httpx",
        "//entity/domain/notification/biz",
        "//entity/domain/payment/biz",
        "//entity/domain/restaurant/biz",
        "//entity/domain/user/biz",
        "//pkg/adapterx",
        "//pkg/contextx",
        "//pkg/errorx",
        "@com_github_gin_contrib_sessions//:sessions",
        "@com_github_gin_contrib_sessions//cookie",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_spf13_viper//:viper",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//health",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//reflection",
        "@org_golang_x_oauth2//:oauth2",
        "@org_uber_go_zap//:zap",
    ],
)
