load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "restful",
    srcs = [
        "impl.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/godine/adapter/restaurant/restful",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/restaurant/wirex",
        "//app/infra/configx",
        "//app/infra/transports/httpx",
        "//pkg/adapterx",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_google_wire//:wire",
        "@com_github_spf13_viper//:viper",
    ],
)
