load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "restful",
    srcs = [
        "impl.go",
        "wire_gen.go",
    ],
    embedsrcs = [
        "web/static/css/app.css",
        "web/static/image/auth0_logo_final_blue_RGB.png",
        "web/static/js/js.cookie.js",
        "web/static/js/user.js",
        "web/template/home.html",
        "web/template/user.html",
    ],
    importpath = "github.com/blackhorseya/godine/adapter/user/restful",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/user/restful/v1:restful",
        "//adapter/user/wirex",
        "//api/user/restful",
        "//app/domain/user/biz",
        "//app/domain/user/repo/user",
        "//app/infra/authx",
        "//app/infra/configx",
        "//app/infra/otelx",
        "//app/infra/storage/mongodbx",
        "//app/infra/transports/httpx",
        "//pkg/adapterx",
        "//pkg/contextx",
        "//pkg/errorx",
        "//pkg/logging",
        "//pkg/responsex",
        "@com_github_gin_contrib_sessions//:sessions",
        "@com_github_gin_contrib_sessions//cookie",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_google_wire//:wire",
        "@com_github_spf13_viper//:viper",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
        "@org_uber_go_zap//:zap",
    ],
)
