load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "logistics",
    srcs = [
        "handler.go",
        "logistics_grpc_client.go",
        "logistics_grpc_server.go",
        "wire.go",
    ],
    importpath = "github.com/blackhorseya/godine/app/domain/logistics",
    visibility = ["//visibility:public"],
    deps = [
        "//app/infra/otelx",
        "//app/infra/storage/mongodbx",
        "//app/infra/transports/grpcx",
        "//entity/domain/logistics/biz",
        "//entity/domain/logistics/model",
        "//entity/domain/logistics/repo",
        "//entity/domain/notification/biz",
        "//pkg/contextx",
        "//pkg/persistence",
        "@com_github_google_wire//:wire",
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/zap/ctxzap",
        "@org_golang_google_grpc//metadata",
        "@org_uber_go_zap//:zap",
    ],
)
