load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "notification",
    srcs = [
        "notification_grpc_client.go",
        "notification_grpc_server.go",
        "wire.go",
    ],
    importpath = "github.com/blackhorseya/godine/app/domain/notification",
    visibility = ["//visibility:public"],
    deps = [
        "//app/infra/otelx",
        "//app/infra/storage/mongodbx",
        "//app/infra/transports/grpcx",
        "//entity/domain/notification/biz",
        "//entity/domain/notification/model",
        "//entity/domain/notification/repo",
        "//entity/domain/user/model",
        "//pkg/contextx",
        "//pkg/utils",
        "@com_github_google_wire//:wire",
        "@org_golang_google_grpc//metadata",
        "@org_uber_go_zap//:zap",
    ],
)
