load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "order",
    srcs = [
        "order_grpc_client.go",
        "order_grpc_server.go",
        "wire.go",
    ],
    importpath = "github.com/blackhorseya/godine/app/domain/order",
    visibility = ["//visibility:public"],
    deps = [
        "//app/infra/otelx",
        "//app/infra/storage/postgresqlx",
        "//app/infra/transports/grpcx",
        "//entity/domain/logistics/biz",
        "//entity/domain/notification/biz",
        "//entity/domain/order/biz",
        "//entity/domain/order/model",
        "//entity/domain/order/repo",
        "//entity/domain/payment/biz",
        "//entity/domain/payment/model",
        "//entity/domain/restaurant/biz",
        "//entity/domain/user/biz",
        "//entity/domain/user/model",
        "//pkg/contextx",
        "@com_github_google_wire//:wire",
        "@org_golang_google_grpc//metadata",
        "@org_uber_go_zap//:zap",
    ],
)
