load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "payment",
    srcs = [
        "payment_grpc_client.go",
        "payment_grpc_server.go",
        "wire.go",
    ],
    importpath = "github.com/blackhorseya/godine/app/domain/payment",
    visibility = ["//visibility:public"],
    deps = [
        "//app/infra/otelx",
        "//app/infra/storage/mongodbx",
        "//app/infra/transports/grpcx",
        "//entity/domain/payment/biz",
        "//entity/domain/payment/model",
        "//entity/domain/payment/repo",
        "//entity/domain/user/model",
        "//pkg/contextx",
        "@com_github_google_wire//:wire",
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/zap/ctxzap",
        "@org_uber_go_zap//:zap",
    ],
)
