load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "restaurant",
    srcs = [
        "menu_grpc_client.go",
        "menu_grpc_server.go",
        "restaurant_grpc_client.go",
        "restaurant_grpc_server.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/godine/app/domain/restaurant",
    visibility = ["//visibility:public"],
    deps = [
        "//app/infra/otelx",
        "//app/infra/storage/mongodbx",
        "//app/infra/transports/grpcx",
        "//entity/domain/restaurant/biz",
        "//entity/domain/restaurant/model",
        "//entity/domain/restaurant/repo",
        "//entity/domain/user/model",
        "//pkg/contextx",
        "//pkg/utils",
        "@com_github_google_wire//:wire",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "restaurant_test",
    srcs = ["restaurant_grpc_server_integration_test.go"],
    embed = [":restaurant"],
    deps = [
        "//app/infra/storage/mongodbx",
        "//app/infra/storage/redix",
        "//entity/domain/restaurant/biz",
        "//pkg/contextx",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@com_github_grpc_ecosystem_go_grpc_middleware//recovery",
        "@com_github_grpc_ecosystem_go_grpc_middleware//tags",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@com_github_stretchr_testify//suite",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//resolver",
        "@org_golang_google_grpc//test/bufconn",
        "@org_mongodb_go_mongo_driver//mongo",
    ],
)
