load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "user",
    srcs = [
        "account_grpc_client.go",
        "account_grpc_server.go",
    ],
    importpath = "github.com/blackhorseya/godine/app/domain/user",
    visibility = ["//visibility:public"],
    deps = [
        "//app/infra/transports/grpcx",
        "//entity/domain/user/biz",
        "//entity/domain/user/model",
        "//pkg/contextx",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_uber_go_zap//:zap",
    ],
)
