load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "authx",
    srcs = ["authx.go"],
    importpath = "github.com/blackhorseya/godine/app/infra/authx",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/contextx",
        "@com_github_coreos_go_oidc_v3//oidc",
        "@org_golang_x_oauth2//:oauth2",
    ],
)
