load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "authz",
    srcs = ["authz.go"],
    importpath = "github.com/blackhorseya/godine/app/infra/authz",
    visibility = ["//visibility:public"],
    deps = [
        "//app/infra/configx",
        "//entity/domain/user/model",
        "//pkg/contextx",
        "//pkg/errorx",
        "//pkg/responsex",
        "@com_github_casbin_casbin_v2//:casbin",
        "@com_github_casbin_gorm_adapter_v3//:gorm-adapter",
        "@com_github_gin_gonic_gin//:gin",
        "@org_uber_go_zap//:zap",
    ],
)
