load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "authz",
    srcs = ["authz.go"],
    importpath = "github.com/blackhorseya/godine/app/infra/authz",
    visibility = ["//visibility:public"],
    deps = [
        "//app/infra/configx",
        "//pkg/contextx",
        "@com_github_casbin_casbin_v2//:casbin",
        "@com_github_casbin_gorm_adapter_v3//:gorm-adapter",
        "@com_github_stretchr_testify//mock",
    ],
)
